[package]
name = "styled"
version = "0.1.22"
edition = "2021"
description = "Scoped styles for your Leptos components"
license = "APL-1.0"
keywords = ["leptos", "scoped", "styles", "styling", "CSS"]
categories = ["wasm", "web-programming"]
readme = "README.md"
homepage = "https://github.com/eboody/styled"

[lib]
path = "src/lib.rs"

[dependencies]
stylist = {version = "0.12.0", optional = false}
regex = "1.7.1"
leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false, features = [
  "serde",
  "ssr"
], version = "0.2.0-beta" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", default-features = false, version = "0.2.0-beta" }

[features]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
]
