[package]
name = "styled"
version = "0.1.41"
edition = "2021"
description = "Scoped styles for your Leptos components"
license = "APL-1.0"
keywords = ["leptos", "scoped", "styles", "styling", "CSS"]
categories = ["wasm", "web-programming"]
readme = "README.md"
homepage = "https://github.com/eboody/styled"

[dependencies]
leptos = { version = "0.5.4", features = ["nightly", "csr"] }
leptos_meta = { version = "0.5.4", features = ["nightly", "csr"] }
regex = "1.9.3"
stylist = "0.13"
